--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -75,6 +75,10 @@
   }
 }
 
+input {
+  font-size: 16px !important;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
